--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,6 +1,8 @@
-name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
+name: 推送 🐍 分发 📦 到 PyPI 或 TestPyPI
 
-on: push
+on:
+  push:
+    branches: [ main ]
 
 jobs:
   # 定义工作流程，这里主要是构建
@@ -12,14 +14,14 @@ jobs:
     - uses: actions/checkout@v4
 
     # https://github.com/marketplace/actions/setup-python
-    - name: Set up Python
+    - name: 设置 Python 版本
       uses: actions/setup-python@v5
       with:
         # 使用 python 版本
         python-version: "3.12.4"
 
     # 安装 build
-    - name: Install pypa/build
+    - name: 安装 pypa/build
       run: >-
         python3 -m
         pip install
@@ -27,41 +29,45 @@ jobs:
         --user
 
     # 构建
-    - name: Build a binary wheel and a source tarball
+    - name: 构建分发包
       run: python3 -m build
 
     # 上传
-    - name: Store the distribution packages
+    - name: 上传分发包
       uses: actions/upload-artifact@v3
       with:
+        # 上传工件，记住这个名字，后面流程会用到
         name: python-package-distributions
         path: dist/
 
-#  publish-to-pypi:
-#    name: >-
-#      Publish Python 🐍 distribution 📦 to PyPI
-#    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
-#    needs:
-#      - build
-#    runs-on: ubuntu-latest
-#    environment:
-#      name: pypi
-#      url: https://pypi.org/p/<package-name>  # Replace <package-name> with your PyPI project name
-#    permissions:
-#      id-token: write  # IMPORTANT: mandatory for trusted publishing
-#
-#    steps:
-#    - name: Download all the dists
-#      uses: actions/download-artifact@v3
-#      with:
-#        name: python-package-distributions
-#        path: dist/
-#    - name: Publish distribution 📦 to PyPI
-#      uses: pypa/gh-action-pypi-publish@release/v1
+  publish-to-pypi:
+    name: >-
+      推送 🐍 分发 📦 到 PyPI
+    # man 分支有效
+    if: github.ref == 'refs/heads/main'
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/tools_mrcode
+    permissions:
+      id-token: write  # IMPORTANT: mandatory for trusted publishing
+
+    steps:
+    - name: 下载 dists
+      uses: actions/download-artifact@v3
+      with:
+        name: python-package-distributions
+        path: dist/
+    - name: 推送 📦 到 PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
 
   # 发布到 testpypi
   publish-to-testpypi:
-    name: Publish Python 🐍 distribution 📦 to TestPyPI
+    name: 推送 🐍 分发 📦 到 TestPyPI
+    # dev 分支有效
+    if: github.ref == 'refs/heads/dev'
     needs:
     - build
     runs-on: ubuntu-latest
@@ -76,13 +82,13 @@ jobs:
 
     steps:
     # 下载打好的包
-    - name: Download all the dists
+    - name: 下载 dists
       uses: actions/download-artifact@v3
       with:
         name: python-package-distributions
         path: dist/
     # 上传到 pypa
-    - name: Publish distribution 📦 to TestPyPI
+    - name: 推送 📦 到 TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         repository-url: https://test.pypi.org/legacy/
